other/s-z/topologyspreadconstraints-policy/01-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: topologyspreadconstraints-policy
status:
  ready: true
